0029058: Coding rules, OpenGl_Window - eliminate memory leak after XGetVisualInfo

Minor memory leak occurring at creation of the view is eliminated.